<resources>
    <string name="app_name">AtomTry</string>
    <string name="user">用户名</string>
    <string name="pass_word">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_number">手机号</string>
    <string name="pass_code">验证码</string>
    <string name="get_pass_code">获取验证码</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="remember_password">记住密码</string>
</resources>
