<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/user" />

    <EditText
        android:id="@+id/login_et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/login_tv_user"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@id/login_tv_user" />

    <TextView
        android:id="@+id/login_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tv_user"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/pass_word" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/login_tv_password"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@id/login_tv_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/login_cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_tv_password"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/remember_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_cb_remember">

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/login" />

        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/register" />
    </LinearLayout>
</RelativeLayout>
